NJ - 05/12/04 - Finished updating the newline handling (it works perfectly) once again, THANK YOU BDASH!
NJ - 05/12/04 - Fix up !kick syntax error.
NJ - 06/12/04 - Added NSPASSWORD to SQL
NJ - 06/12/04 - Made a small optimization in ircbpconfig.py to incorporate the DB handling to end result into 1 line (instead of two) and only two varibles, looking for more to be made currently.
NJ - 06/12/04 - Remade create_config.sql (this time from phpMyAdmin).  Now also drops existing table (if any) so PLEASE watch out!
NJ - 06/12/04 - Limited SQL query to one result which should prevent problems.
NJ - 07/12/04 - 433 numeric now handled - means that it append a _ to ircbpconfig.NICKNAME and send a NICK command to the server until it is allowed
NJ - 07/12/04 - 376 numeric now handled - When the server gets the 376 (END OF MOTD) numeric it will THEN send Nickserv Identification and Join requested channels.
NJ - 07/12/04 - Implemented db-based channels and users to the bot.
NJ - 07/12/04 - Fixed comments in ircbpconfig.py (to make it clearer in the fact you only need to edit the SQL settings now).
BP - 07/12/04 - Fixed some spacing and such. Mostly code browsing since i need (and dont have) _mysql for the bot to work  =P
NJ - 06/01/05 - Modulized common functions into ircbpcommon.py
NJ - 06/01/05 - Added error handing to mysql (rough for now)
NJ - 06/01/05 - Moved socket stuff so not much is left in ircbp.py
NJ - 06/01/05 - Fixed missing comment in ircbpcommon.py
NJ - 06/01/05 - Fixed problem CHANGELOG (3rd time lucky hopefully)
NJ - 06/01/05 - Changed _mysql to MySQLdb (http://sourceforge.net/projects/mysql-python/)
NJ - 06/01/05 - Spotted new mistake with my changelog entries, it's 05 now not 04 ;)
NJ - 07/01/05 - Readded the missing "addchan()"
NJ - 07/01/05 - Fixed the thing that was dealing with making the channels sql query so it would work nicely... (copy and paste error)