@@ -163,3 +163,4 @@ NJ - 06/01/05 - Changed _mysql to MySQLdb (http://sourceforge.net/projects/mysql
 NJ - 06/01/05 - Spotted new mistake with my changelog entries, it's 05 now not 04 ;)
 NJ - 07/01/05 - Readded the missing "addchan()"
 NJ - 07/01/05 - Fixed the thing that was dealing with making the channels sql query so it would work nicely... (copy and paste error)
+NJ - 15/01/05 - remchan instead of ircbpcommon.remchan  oppps!
